--- a/libs/search-widget/src/common/common-style.scss
+++ b/libs/search-widget/src/common/common-style.scss
@@ -1,6 +1,6 @@
 .nuclia-widget {
   /* PALETTE */
-  --color-dark-stronger: var(--custom-color-dark-stronger, '#000');
+  --color-dark-stronger: var(--custom-color-dark-stronger, #000);
   --color-dark-stronger-rgb: 0, 0, 0;
   --color-light-stronger: #fff;
 
