Update tiles to use new viewer store

--- a/libs/search-widget/src/tiles/_media-tile.scss
+++ b/libs/search-widget/src/tiles/_media-tile.scss
@@ -92,6 +92,10 @@
     &.expanded .summary-container {
       display: block;
       margin-top: var(--rhythm-3);
+
+      .summary {
+        overflow-wrap: break-word;
+      }
     }
 
     &.expanded .result-details {
