Fixes from UX review
  - update secondary basic button background on hover and active states (one step darker)
  - update expanded tile background color (one step darker)
  - update side panel button color (document tile)
  - update side panel button icon when open (chevrons-right instead of left)

--- a/libs/search-widget/src/common/button/Button.scss
+++ b/libs/search-widget/src/common/button/Button.scss
@@ -106,8 +106,8 @@
 
   &.basic.secondary {
     --button-background-color: transparent;
-    --button-background-color-hover: var(--color-neutral-lighter);
-    --button-background-color-active: var(--color-neutral-light);
+    --button-background-color-hover: var(--color-neutral-light);
+    --button-background-color-active: var(--color-neutral-regular);
     --button-color: var(--color-dark-stronger);
     --button-color-hover: var(--color-dark-stronger);
     --button-color-active: var(--color-dark-stronger);
