--- a/libs/sistema/theme/tokens/_buttons.tokens.scss
+++ b/libs/sistema/theme/tokens/_buttons.tokens.scss
@@ -47,6 +47,10 @@ $color-background-button-secondary-solid: $color-dark-stronger;
 $color-background-button-secondary-solid-hover: $color-dark-stronger;
 $color-background-button-secondary-solid-active: $color-neutral-regular;
 
+//basic
+$color-background-button-secondary-basic-hover: $color-neutral-light;
+$color-background-button-secondary-basic-active: $color-neutral-regular;
+
 //---------------------------------------------------------------
 // DESTRUCTIVE
 //---------------------------------------------------------------
