--- a/libs/search-widget/src/tiles/_text-tile.scss
+++ b/libs/search-widget/src/tiles/_text-tile.scss
@@ -54,7 +54,8 @@
 
       .side-panel-button {
         align-items: center;
-        background-color: var(--color-neutral-light);
+        background-color: var(--color-dark-stronger);
+        color: var(--color-light-stronger);
         display: flex;
         height: var(--side-panel-button-size);
         justify-content: center;
