Redirect to resource list page after dataset import

--- a/apps/dashboard/src/app/resources/sample-dataset/dataset-import.component.html
+++ b/apps/dashboard/src/app/resources/sample-dataset/dataset-import.component.html
@@ -5,7 +5,7 @@
     {{ 'onboarding.dataset.option1.description' | translate }}
   </p>
 
-  <app-dataset-selector></app-dataset-selector>
+  <app-dataset-selector (imported)="onDatasetImported($event)"></app-dataset-selector>
 
   <div class="upload-data">
     <h2>{{ 'onboarding.dataset.option2' | translate }}</h2>
