Improve open viewer button position

--- a/apps/dashboard/src/app/resources/edit/preview/preview.component.scss
+++ b/apps/dashboard/src/app/resources/edit/preview/preview.component.scss
@@ -6,7 +6,9 @@
 }
 
 .viewer-button-container {
+  flex: 1 0 auto;
   position: relative;
+  text-align: center;
 
   pa-button {
     position: sticky;
