[sc-3073] Image tile implementation

--- a/libs/search-widget/src/common/paragraph-result/ParagraphResult.scss
+++ b/libs/search-widget/src/common/paragraph-result/ParagraphResult.scss
@@ -1,5 +1,4 @@
 .sw-paragraph-result {
-  cursor: pointer;
   display: flex;
   font-size: var(--font-size-medium);
   gap: var(--rhythm-1);
@@ -21,6 +20,9 @@
   }
   &.no-indicator.selected {
     color: var(--color-primary-regular);
+  }
+  &:not(.disabled) {
+    cursor: pointer;
   }
 
   .paragraph-text {
