Fix secondary basic active button color in sistema

--- a/libs/sistema/theme/tokens/_buttons.tokens.scss
+++ b/libs/sistema/theme/tokens/_buttons.tokens.scss
@@ -50,6 +50,7 @@ $color-background-button-secondary-solid-active: $color-neutral-regular;
 //basic
 $color-background-button-secondary-basic-hover: $color-neutral-light;
 $color-background-button-secondary-basic-active: $color-neutral-regular;
+$color-text-button-secondary-basic-active: $color-light-stronger;
 
 //---------------------------------------------------------------
 // DESTRUCTIVE
