--- a/libs/search-widget/src/common/button/Button.scss
+++ b/libs/search-widget/src/common/button/Button.scss
@@ -110,7 +110,7 @@
     --button-background-color-active: var(--color-neutral-regular);
     --button-color: var(--color-dark-stronger);
     --button-color-hover: var(--color-dark-stronger);
-    --button-color-active: var(--color-dark-stronger);
+    --button-color-active: var(--color-light-stronger);
   }
 
   &.basic.inverted {
