Fix layout on resource edition flow
  - footer always fixed on the bottom of the page
  - usage of the right panel in most of the pages

--- a/apps/dashboard/src/app/resources/edit/_edit-resource.tokens.scss
+++ b/apps/dashboard/src/app/resources/edit/_edit-resource.tokens.scss
@@ -13,3 +13,5 @@ $width-page-content-large: rhythm(90);
 
 $header-separator: inset 0 -1px 0 $color-neutral-light;
 $footer-separator: inset 0 1px 0 $color-neutral-light;
+
+$annotation-header-height: rhythm(9);
