--- a/apps/dashboard/src/app/resources/edit/classification/paragraph-classification/paragraph-classification.component.html
+++ b/apps/dashboard/src/app/resources/edit/classification/paragraph-classification/paragraph-classification.component.html
@@ -1,39 +1,28 @@
 <div class="main-container">
-  <div class="classification-container">
-    <div class="title-s">{{ 'resource.field-classification' | translate }}</div>
-    <div
-      *ngIf="(hasLabels | async) === true; else noLabel"
-      class="classification-header">
-      <app-label-dropdown
-        single
-        [labelSets]="availableLabels | async"
-        (selectionChange)="updateSelection($event)">
-        {{ currentLabel ? currentLabel.labelset + ' – ' + currentLabel.label : ('generic.select_tags' | translate) }}
-      </app-label-dropdown>
-
-      <pa-input
-        [icon]="searchQuery ? 'cross' : 'search'"
-        [class.can-reset]="!!searchQuery"
-        [(ngModel)]="searchQuery"
-        (click)="onSearchInputClick($event)"
-        (keyup.enter)="triggerSearch()">
-        {{ 'resource.field.search' | translate }}
-      </pa-input>
-    </div>
-
-    <ng-template #noLabel>
-      <p>
-        {{ 'resource.classification.no-paragraph-labelset' | translate }}
-        <a [routerLink]="(kbUrl | async) + '/label-sets'">
-          {{ 'resource.classification-page-link' | translate }}
-        </a>
-      </p>
-    </ng-template>
+  <div
+    *ngIf="(hasLabels | async) === true; else noLabel"
+    class="search-box-container">
+    <pa-input
+      [icon]="searchQuery ? 'cross' : 'search'"
+      [class.can-reset]="!!searchQuery"
+      [(ngModel)]="searchQuery"
+      (click)="onSearchInputClick($event)"
+      (keyup.enter)="triggerSearch()">
+      {{ 'resource.field.search' | translate }}
+    </pa-input>
   </div>
+  <ng-template #noLabel>
+    <p *ngIf="labelLoaded">
+      {{ 'resource.classification.no-paragraph-labelset' | translate }}
+      <a [routerLink]="(kbUrl | async) + '/label-sets'">
+        {{ 'resource.classification-page-link' | translate }}
+      </a>
+    </p>
+  </ng-template>
 
   <div
     *ngIf="(hasLabels | async) === true"
-    class="paragraphs-container"
+    class="scrollable-area with-search-and-footer paragraphs-container"
     [class.disabled]="!currentLabel">
     <pa-infinite-scroll (reachAnchor)="loadMore()">
       <div
@@ -60,19 +49,32 @@
     </pa-infinite-scroll>
   </div>
 
-  <footer class="form-buttons">
-    <pa-button
-      kind="primary"
-      [disabled]="!isModified || isSaving"
-      (click)="save()">
-      {{ 'generic.save' | translate }}
-    </pa-button>
-
-    <pa-button
-      aspect="basic"
-      [disabled]="!isModified || isSaving"
-      (click)="cancel()">
-      {{ 'generic.cancel' | translate }}
-    </pa-button>
-  </footer>
+  <div
+    class="right-panel-container"
+    *ngIf="(hasLabels | async) === true">
+    <app-label-dropdown
+      single
+      [labelSets]="availableLabels | async"
+      (selectionChange)="updateSelection($event)">
+      {{ currentLabel ? currentLabel.labelset + ' – ' + currentLabel.label : ('generic.select_tags' | translate) }}
+    </app-label-dropdown>
+  </div>
 </div>
+
+<footer
+  class="form-buttons"
+  *ngIf="(hasLabels | async) === true">
+  <pa-button
+    kind="primary"
+    [disabled]="!isModified || isSaving"
+    (click)="save()">
+    {{ 'generic.save' | translate }}
+  </pa-button>
+
+  <pa-button
+    aspect="basic"
+    [disabled]="!isModified || isSaving"
+    (click)="cancel()">
+    {{ 'generic.cancel' | translate }}
+  </pa-button>
+</footer>
