--- a/libs/search-widget/src/tiles/viewers/SpreadsheetViewer.scss
+++ b/libs/search-widget/src/tiles/viewers/SpreadsheetViewer.scss
@@ -1,25 +1,24 @@
 .sw-spreadsheet-viewer {
-  --tabs-height: var(--rythm-8);
-  background-color: #fff;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
   height: 100%;
-  justify-content: flex-start;
-  overflow: auto;
-  padding: var(--rhythm-2);
   width: 100%;
 
   .tabs {
-    display: flex;
     flex-shrink: 0;
-    gap: var(--rhythm-1);
-    padding-bottom: var(--rhythm-2);
-    overflow-x: auto;
-    white-space: nowrap;
+  }
+
+  .table-container {
+    background-color: var(--color-light-stronger);
+    flex: 1 1 0;
+    overflow: auto;
+    padding: var(--rhythm-2);
+
   }
 
   table {
+    background-color: var(--color-light-stronger);
     border-collapse: collapse;
     margin: 0 auto;
   }
@@ -27,7 +26,7 @@
   td {
     border: 1px solid var(--color-neutral-light);
     font-size: var(--font-size-medium);
-    max-width: 200px;
+    max-width: var(--rhythm-27);
     padding: var(--rhythm-1_5) var(--rhythm-1);
   }
 }
