Fix layout on all edit forms

--- a/apps/dashboard/src/app/resources/edit/annotation/paragraph-annotation/paragraph-annotation.component.html
+++ b/apps/dashboard/src/app/resources/edit/annotation/paragraph-annotation/paragraph-annotation.component.html
@@ -10,7 +10,7 @@
     </pa-input>
   </div>
 
-  <div class="scrollable-area with-search-and-footer">
+  <div class="scrollable-area with-search-and-footer with-right-panel">
     <div
       #paragraphsContainer
       class="paragraphs-container">
@@ -97,7 +97,7 @@
   </div>
 </div>
 
-<footer class="form-buttons">
+<footer class="form-buttons with-right-panel">
   <pa-button
     kind="primary"
     [disabled]="!isModified || isSaving"
