--- a/apps/dashboard/src/app/resources/edit/classification/paragraph-classification/paragraph-classification.component.html
+++ b/apps/dashboard/src/app/resources/edit/classification/paragraph-classification/paragraph-classification.component.html
@@ -22,7 +22,7 @@
 
   <div
     *ngIf="(hasLabels | async) === true"
-    class="scrollable-area with-search-and-footer paragraphs-container"
+    class="scrollable-area with-search-and-footer with-right-panel paragraphs-container"
     [class.disabled]="!currentLabel">
     <pa-infinite-scroll (reachAnchor)="loadMore()">
       <div
@@ -62,7 +62,7 @@
 </div>
 
 <footer
-  class="form-buttons"
+  class="form-buttons with-right-panel"
   *ngIf="(hasLabels | async) === true">
   <pa-button
     kind="primary"
