--- a/apps/dashboard/src/app/resources/edit/profile/profile.component.html
+++ b/apps/dashboard/src/app/resources/edit/profile/profile.component.html
@@ -1,5 +1,5 @@
 <div class="main-container">
-  <div class="scrollable-area with-footer">
+  <div class="scrollable-area with-footer with-right-panel">
     <form
       [formGroup]="form"
       (ngSubmit)="save()">
@@ -117,7 +117,7 @@
   </div>
 </div>
 
-<footer class="form-buttons">
+<footer class="form-buttons with-right-panel">
   <pa-button
     kind="primary"
     [disabled]="!form.valid || form.pristine || isSaving"
