--- a/apps/dashboard/src/app/resources/edit/edit-resource.component.html
+++ b/apps/dashboard/src/app/resources/edit/edit-resource.component.html
@@ -19,8 +19,8 @@
         (click)="onViewChange()"></pa-button>
       <pa-button
         icon="edit"
-        routerLink="profile"
-        [active]="currentView === 'profile'"
+        routerLink="resource"
+        [active]="currentView === 'resource'"
         paTooltip="resource.tooltip.edition"
         aspect="basic"
         (click)="onViewChange()"></pa-button>
@@ -53,8 +53,8 @@
       <ul *ngIf="currentView !== 'add-field'">
         <li
           *ngIf="currentView !== 'preview' && currentView !== 'annotation'"
-          [class.active]="(currentField | async) === 'profile'"
-          (click)="navigateToField('profile')">
+          [class.active]="(currentField | async) === 'resource'"
+          (click)="navigateToField('resource')">
           <pa-icon
             name="file"
             size="small"></pa-icon>
@@ -63,7 +63,7 @@
         <li
           *ngFor="let field of fields | async"
           [class.active]="
-            activeField !== 'profile' &&
+            activeField !== 'resource' &&
             activeField?.field_id === field.field_id &&
             activeField?.field_type === field.field_type
           "
