Enable multi selection of labels when classifying paragraphs

--- a/apps/dashboard/src/app/resources/edit/classification/paragraph-classification/paragraph-classification.component.scss
+++ b/apps/dashboard/src/app/resources/edit/classification/paragraph-classification/paragraph-classification.component.scss
@@ -44,3 +44,9 @@ $padding-bottom-header: rhythm(3);
     }
   }
 }
+
+.label-selection-container {
+  display: flex;
+  flex-direction: column;
+  gap: rhythm(3);
+}
