--- a/apps/dashboard/src/app/resources/edit/classification/paragraph-classification/paragraph-classification.component.html
+++ b/apps/dashboard/src/app/resources/edit/classification/paragraph-classification/paragraph-classification.component.html
@@ -23,12 +23,12 @@
   <div
     *ngIf="(hasLabels | async) === true"
     class="scrollable-area with-search-and-footer with-right-panel paragraphs-container"
-    [class.disabled]="!currentLabel">
+    [class.disabled]="currentLabels.length === 0">
     <pa-infinite-scroll (reachAnchor)="loadMore()">
       <div
         class="paragraph-container"
         *ngFor="let paragraph of paragraphs | async">
-        <p (click)="addLabelOnParagraph(paragraph)">{{ paragraph.text }}</p>
+        <p (click)="addLabelsOnParagraph(paragraph)">{{ paragraph.text }}</p>
         <div class="labels-container">
           <pa-chip-closeable
             *ngFor="let label of paragraph.generatedClassifications"
@@ -52,12 +52,27 @@
   <div
     class="right-panel-container"
     *ngIf="(hasLabels | async) === true">
-    <app-label-dropdown
-      single
-      [labelSets]="availableLabels | async"
-      (selectionChange)="updateSelection($event)">
-      {{ currentLabel ? currentLabel.labelset + ' – ' + currentLabel.label : ('generic.select_tags' | translate) }}
-    </app-label-dropdown>
+    <div class="label-selection-container">
+      <app-label-dropdown
+        [labelSets]="availableLabels | async"
+        [selection]="currentLabels"
+        (selectionChange)="updateSelection($event)">
+        {{ 'generic.select_tags' | translate }}
+      </app-label-dropdown>
+
+      <app-label-selection
+        [selection]="currentLabels"
+        (removeFromSelection)="removeLabelFromSelection($event)"></app-label-selection>
+
+      <pa-button
+        *ngIf="currentLabels.length > 0"
+        aspect="basic"
+        kind="destructive"
+        size="small"
+        (click)="cleanUpLabels()">
+        {{ 'resource.classification.clean-up' | translate }}
+      </pa-button>
+    </div>
   </div>
 </div>
 
