--- a/apps/dashboard/src/app/resources/edit/classification/resource-classification.component.html
+++ b/apps/dashboard/src/app/resources/edit/classification/resource-classification.component.html
@@ -1,20 +1,21 @@
 <div class="main-container">
-  <div class="scrollable-area classification-container">
-    <label class="title-s">{{ 'resource.classification' | translate }}</label>
-    <div>
-      <p *ngIf="noLabels">
-        {{ 'resource.classification.no-resource-labelset' | translate }}
-        <a [routerLink]="(kbUrl | async) + '/label-sets'">{{ 'resource.classification-page-link' | translate }}</a>
-      </p>
+  <p *ngIf="noLabels; else labelSelector">
+    {{ 'resource.classification.no-resource-labelset' | translate }}
+    <a [routerLink]="(kbUrl | async) + '/label-sets'">{{ 'resource.classification-page-link' | translate }}</a>
+  </p>
+  <ng-template #labelSelector>
+    <div class="scrollable-area classification-container">
       <app-label-field
         [selection]="currentLabels"
         (noLabels)="noLabels = $event"
         (selectionChange)="updateLabels($event)"></app-label-field>
     </div>
-  </div>
+  </ng-template>
 </div>
 
-<footer class="form-buttons">
+<footer
+  *ngIf="!noLabels"
+  class="form-buttons">
   <pa-button
     kind="primary"
     [disabled]="!isModified"
