[sc-4211] Enable multi selection of labels when classifying (#607)
* Fix layout on resource edition flow

  - footer always fixed on the bottom of the page
  - usage of the right panel in most of the pages

* Improve translations

* Fix layout on all edit forms

* Automatically select first field on classification section

Rename profile into resource

* Enable multi selection of labels when classifying paragraphs

* Fix message display when no labels for paragraphs

* Display a message when there is no extracted text for a field

  - Display a spinner when loading paragraphs takes more than 1.5s
  - Fix alignment for no resource label set message on resource classification page

--- a/apps/dashboard/src/app/resources/edit/classification/resource-classification.component.html
+++ b/apps/dashboard/src/app/resources/edit/classification/resource-classification.component.html
@@ -1,31 +1,32 @@
 <div class="main-container">
-  <div class="classification-container">
-    <label class="title-s">{{ 'resource.classification' | translate }}</label>
-    <div>
-      <p *ngIf="noLabels">
-        {{ 'resource.classification.no-resource-labelset' | translate }}
-        <a [routerLink]="(kbUrl | async) + '/label-sets'">{{ 'resource.classification-page-link' | translate }}</a>
-      </p>
+  <p *ngIf="noLabels; else labelSelector">
+    {{ 'resource.classification.no-resource-labelset' | translate }}
+    <a [routerLink]="(kbUrl | async) + '/label-sets'">{{ 'resource.classification-page-link' | translate }}</a>
+  </p>
+  <ng-template #labelSelector>
+    <div class="scrollable-area classification-container">
       <app-label-field
         [selection]="currentLabels"
         (noLabels)="noLabels = $event"
         (selectionChange)="updateLabels($event)"></app-label-field>
     </div>
-  </div>
-
-  <footer class="form-buttons">
-    <pa-button
-      kind="primary"
-      [disabled]="!isModified"
-      (click)="save()">
-      {{ 'generic.save' | translate }}
-    </pa-button>
-
-    <pa-button
-      aspect="basic"
-      [disabled]="!isModified"
-      (click)="cancel()">
-      {{ 'generic.cancel' | translate }}
-    </pa-button>
-  </footer>
+  </ng-template>
 </div>
+
+<footer
+  *ngIf="!noLabels"
+  class="form-buttons">
+  <pa-button
+    kind="primary"
+    [disabled]="!isModified"
+    (click)="save()">
+    {{ 'generic.save' | translate }}
+  </pa-button>
+
+  <pa-button
+    aspect="basic"
+    [disabled]="!isModified"
+    (click)="cancel()">
+    {{ 'generic.cancel' | translate }}
+  </pa-button>
+</footer>
