--- a/apps/dashboard/src/app/resources/edit/classification/paragraph-classification/paragraph-classification.component.scss
+++ b/apps/dashboard/src/app/resources/edit/classification/paragraph-classification/paragraph-classification.component.scss
@@ -21,13 +21,6 @@ $padding-bottom-header: rhythm(3);
 }
 
 .paragraphs-container {
-  max-height: calc(
-    100vh - var(--app-topbar-height) - #{$height-header + $padding-bottom-header} - #{$padding-top-page-container} - #{$footer-height} -
-      #{rhythm(10)}
-  );
-  overflow: auto;
-  padding-top: rhythm(4);
-
   &.disabled .paragraph-container p {
     cursor: default;
   }
@@ -50,4 +43,10 @@ $padding-bottom-header: rhythm(3);
       height: rhythm(4);
     }
   }
+}
+
+.label-selection-container {
+  display: flex;
+  flex-direction: column;
+  gap: rhythm(3);
 }
