--- a/apps/dashboard/src/app/resources/edit/common-page-layout.scss
+++ b/apps/dashboard/src/app/resources/edit/common-page-layout.scss
@@ -1,17 +1,69 @@
 @import 'edit-resource.tokens';
 
+.main-container {
+  display: flex;
+  gap: rhythm(5);
+  max-height: calc(
+    100vh - var(--app-topbar-height) - #{$height-header} - #{$padding-top-page-container} - #{$footer-height}
+  );
+
+  & > p {
+    margin-bottom: 0;
+    margin-top: rhythm(0.5); // align message with the navigation menu
+  }
+}
+
+.search-box-container {
+  position: absolute;
+  background: white;
+  z-index: 1;
+
+  pa-input.can-reset ::ng-deep pa-icon {
+    cursor: pointer;
+  }
+}
 .scrollable-area {
   height: calc(100vh - var(--app-topbar-height) - #{$height-header} - #{$padding-top-page-container});
   overflow: auto;
-  width: $width-page-content;
+  width: $width-page-content-large;
+
+  &.with-right-panel {
+    width: $width-page-content;
+  }
+
+  &.with-footer {
+    height: calc(
+      100vh - var(--app-topbar-height) - #{$height-header} - #{$padding-top-page-container} - #{$footer-height}
+    );
+  }
+  &.with-search-and-footer {
+    height: calc(
+      100vh - var(--app-topbar-height) - #{$height-header} - #{$padding-top-page-container} - #{$footer-height} - #{$annotation-header-height}
+    );
+    margin-top: $annotation-header-height;
+  }
 }
 
-footer.with-margin {
-  margin-top: $footer-margin;
+.right-panel-container {
+  max-height: calc(
+    100vh - var(--app-topbar-height) - #{$height-header} - #{$padding-top-page-container} - #{rhythm(5)}
+  );
+  overflow: auto;
+  width: rhythm(32);
+}
+
+footer:not(.with-right-panel) {
+  max-width: $width-page-content-large;
+}
+footer.with-right-panel {
+  max-width: $width-page-content;
 }
 
 @media (min-width: $size-viewport-xlarge-min) {
-  .scrollable-area {
+  .scrollable-area.with-right-panel {
     width: $width-page-content-large;
+  }
+  footer.with-right-panel {
+    max-width: $width-page-content-large;
   }
 }
