--- a/apps/dashboard/src/app/knowledge-box/service-access/service-access.component.html
+++ b/apps/dashboard/src/app/knowledge-box/service-access/service-access.component.html
@@ -33,33 +33,19 @@
         <div
           class="service-access"
           *ngFor="let sa of serviceAccess">
-          <div
-            class="service-access-header"
-            fxLayout="row"
-            fxLayoutAlign="space-between center">
-            <div
-              class="service-access-title"
-              fxFlex="1 1 0">
-              <button
-                (click)="toggleSA(sa.id)"
-                [disabled]="!sa.keys || sa.keys.length === 0">
-                <div
-                  fxLayout="row"
-                  fxLayoutAlign="start center"
-                  fxLayoutGap="4px">
-                  <pa-icon
-                    *ngIf="sa.keys && sa.keys.length > 0"
-                    name="chevron-right"
-                    size="small"
-                    class="service-access-title-arrow"
-                    [class.expanded]="isExpanded(sa.id)"></pa-icon>
-                  <span>{{ sa.title }}</span>
-                </div>
-              </button>
+          <div class="service-access-header">
+            <div class="service-access-title">
+              <pa-button
+                aspect="basic"
+                icon="chevron-right"
+                size="small"
+                class="service-access-title-arrow"
+                [disabled]="!sa.keys || sa.keys.length === 0"
+                [class.expanded]="isExpanded(sa.id)"
+                (click)="toggleSA(sa.id)"></pa-button>
+              <span>{{ sa.title }}</span>
             </div>
-            <div
-              class="service-access-actions"
-              fxFlex="0 0 auto">
+            <div class="service-access-actions">
               <pa-button
                 (click)="createKey(sa)"
                 aspect="basic"
@@ -86,20 +72,14 @@
               <div class="service-access-keys">
                 <div
                   class="service-access-key"
-                  *ngFor="let key of sa.keys"
-                  fxLayout="row"
-                  fxLayoutAlign="start center">
-                  <div
-                    class="service-access-key-id"
-                    fxFlex="0 0 60%">
+                  *ngFor="let key of sa.keys">
+                  <div class="service-access-key-id">
                     {{ key.id }}
                   </div>
-                  <div fxFlex="0 0 100px">
+                  <div>
                     {{ key.expires | formatDate }}
                   </div>
-                  <div
-                    class="service-access-key-actions"
-                    fxFlex="1 1 auto">
+                  <div class="service-access-key-actions">
                     <pa-button
                       (click)="deleteKey(sa, key)"
                       class="delete-key"
